<resources>
    <string name="app_name">MapMonster</string>
    <string name="permission_rationale_location">Location permission is needed for this app</string>
    <string name="permission_required_toast">Location permission</string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_help">Help</string>
    <string name="layers">Layers</string>
    <string name="markers">Markers</string>
    <string name="marker_info">Marker Info</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="up_arrow">↑</string>
    <string name="details">Marker details</string>
    <string name="plus_sign">+</string>
    <string name="map_style">[
  {
    "featureType": "poi",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.business",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "transit",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="marker_code">Marker code</string>
    <string name="marker_name">Marker name</string>
    <string name="settings">Settings</string>
    <string name="help">help</string>
    <string name="section">Section</string>
    <string name="childMarkerName">Marker name</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="add_marker">Add marker</string>
    <string name="show_all">Show all</string>
    <string name="hide_all">Hide all</string>
    <string name="show_layer_list">Show layer list</string>
    <string name="section_switch">Switch</string>
    <string name="description">Description</string>
    <string name="markerid">markerID:</string>
    <string name="marker_notes">Marker notes</string>
    <string name="hide_alll">Hide all</string>
    <string name="show_alll">Show all</string>
    <string name="marker_id">\"Marker ID: \"</string>
    <string name="confirm_destroy">Confirm - All waypoint data will be destroyed and cannot be restored.</string>
    <string name="destroy">Destroy</string>
    <string name="restore_deleted_markers">Restore</string>
    <string name="confirm_restore">Confirm restore</string>
    <string name="layer">Layer</string>
    <string name="layer_id">Layer ID</string>
    <string name="icon">Icon</string>
    <string name="layer_name">Layer name</string>
    <string name="show_on_map">Show on map</string>
    <string name="layer_details">Layer details</string>
    <string name="layer_code">Layer code</string>
    <string name="icon_for_layer">Layer icon</string>
    <string name="icon_image">Icon image</string>
    <string name="go_marker_list">Marker list</string>
    <string name="go_layer_list">Layer list</string>
    <string name="new_marker">New marker</string>
    <string name="save_markers">Save markers</string>
    <string name="load_markers">Import markers</string>
    <string name="email_markers">Email markers</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_delete_message">Ask for confirmation before deleting any data</string>
    <string name="no_confirm_delete_message">No warning before data deletion</string>
    <string name="toggle_marker_visibility">Toggle marker visibility</string>
    <string name="marker_icon">Marker icon</string>
    <string name="visible_markers">Visible Markers</string>
    <string name="visible_layers">Visible Layers</string>
    <string name="list_markers">Marker list</string>
    <string name="marker_edit">Marker List</string>
    <string name="marker_archived">Archived</string>
    <string name="id">ID</string>
    <string name="deselect_all">Deselect all</string>
    <string name="archive_selected">Archive selected</string>
    <string name="empty_trash">Empty trash</string>
    <string name="unarchive_all">Unarchive all</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>