<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/go_layer_list"
        android:icon="@drawable/layers"
        android:title="@string/go_layer_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/go_marker_list"
        android:icon="@drawable/map_markers_white_48"
        android:title="@string/go_marker_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings_menu_item"
        android:icon="@drawable/settings_white_48"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/help_menu_item"
        android:icon="@drawable/help_48"
        android:title="@string/help"
        app:showAsAction="ifRoom" />
</menu>