<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/general_preferences">
    <PreferenceCategory android:title="General">

        <SwitchPreference
            android:defaultValue="false"
            android:key="mapToolbarEnabled"
            android:title="Show map toolbar" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="compassEnabled"
            android:title="Show compass" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="zoomControlsEnabled"
            android:title="Show zoom controls" />
        <ListPreference
            android:defaultValue="normal"
            android:entries="@array/view_entries"
            android:entryValues="@array/view_values"
            android:key="map_view_type"
            android:title="Map view"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:background="#A84242"
        android:title="Export data">
<!--        <EditTextPreference-->
<!--            android:key="email_address"-->
<!--            android:selectAllOnFocus="true"-->
<!--            android:singleLine="true"-->
<!--            android:title="Email address"-->
<!--            app:useSimpleSummaryProvider="true" />-->
        <ListPreference
            android:defaultValue="CSV"
            android:entries="@array/export_items"
            android:entryValues="@array/export_items"
            android:key="export_format"
            android:title="Export format"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:background="#A84242"
        android:title="Nuclear options">

        <SwitchPreference
            android:defaultValue="true"
            android:key="confirm_delete"
            android:title="@string/confirm_delete"
            app:defaultValue="true"
            app:summaryOn="@string/confirm_delete_message"
            android:summary="@string/no_confirm_delete_message"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="destroy_switch"
            android:title="@string/destroy" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/warning_24"
            android:key="destroy_confirm"
            android:title="@string/confirm_destroy" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="restore_switch"
            android:title="@string/restore_deleted_markers" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/warning_24"
            android:key="restore_confirm"
            android:title="@string/confirm_restore" />
    </PreferenceCategory>
</PreferenceScreen>