<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layerHeaderTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE7F6"
    tools:context=".activities.LayerListActivity">

    <TextView
        android:id="@+id/listTitleView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_500"
        android:padding="@dimen/small_margin"
        android:text="@string/layers"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/layerDataRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/listTitleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listTitleView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layerDataRecyclerView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layerDataRecyclerView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="80dp" />

        <TextView
            android:id="@+id/layerHeaderView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:background="@color/purple_500"
            android:text="@string/layer_details"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/layerNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/layer_name"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toStartOf="@+id/twenty_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layerHeaderView" />

        <TextView
            android:id="@+id/layernameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/twenty_percent"
            app:layout_constraintTop_toTopOf="@+id/layerNameLabel" />

        <TextView
            android:id="@+id/layerCodeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/code"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toStartOf="@+id/twenty_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layerNameLabel" />

        <TextView
            android:id="@+id/layerCodeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/twenty_percent"
            app:layout_constraintTop_toTopOf="@+id/layerCodeLabel" />

        <TextView
            android:id="@+id/layerIconLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/icon"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toStartOf="@+id/twenty_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layerCodeLabel" />

        <TextView
            android:id="@+id/layerIconTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/twenty_percent"
            app:layout_constraintTop_toTopOf="@+id/layerIconLabel" />

        <TextView
            android:id="@+id/visibilityLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/show_on_map"
            android:textColor="@color/purple_700"
            app:layout_constraintBaseline_toBaselineOf="@+id/visibilitySwitch"
            app:layout_constraintEnd_toStartOf="@+id/twenty_percent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/visibilitySwitch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/twenty_percent"
            app:layout_constraintTop_toBottomOf="@+id/layerIconTextView" />

        <TextView
            android:id="@+id/markerListHeaderLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:layout_marginTop="8dp"
            android:background="@color/purple_500"
            android:text="@string/markers"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visibilityLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/markerListRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/markerListHeaderLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>