<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/childMarkerRV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/childMarkerNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin"
        android:text="@string/childMarkerName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/detailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childMarkerNameTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/code"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/codeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/code"
                android:textAlignment="viewStart"
                android:textColor="@color/purple_700" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/lng"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lngTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lng"
                android:textAlignment="viewStart"
                android:textColor="@color/purple_700" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textAlignment="viewStart"
                android:textColor="@color/purple_700" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>